--- a/arch/arm/configs/a106_defconfig
+++ b/arch/arm/configs/a106_defconfig
@@ -2542,6 +2542,7 @@ CONFIG_ZRAM_DEBUG=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
