--- a/arch/arm/configs/holly_defconfig
+++ b/arch/arm/configs/holly_defconfig
@@ -1129,7 +1129,7 @@ CONFIG_UID_STAT=y
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6582"
-CONFIG_ARCH_MTK_PROJECT="a106"
+CONFIG_ARCH_MTK_PROJECT="holly"
 # CONFIG_MTK_INTERNAL is not set
 CONFIG_MTK_CIRQ=y
 # CONFIG_MTK_SYSTRACKER is not set
