holly: disable some configss for now

--- a/arch/arm/configs/holly_defconfig
+++ b/arch/arm/configs/holly_defconfig
@@ -1164,8 +1164,8 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 # CONFIG_CUSTOM_SEC_AUTH_SUPPORT is not set
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov5648_mipi_raw_darling ov5648_mipi_raw_truly ov5648_mipi_raw_sunwin ov5648_mipi_raw_darling_zl hi258_mipi_yuv_cmk hi258_mipi_yuv_sw"
-CONFIG_CUSTOM_KERNEL_LCM="hx8369b_wvga_dsi_vdo_tinno hx8369b_wvga_dsi_vdo_tinno_txd"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR=""
+CONFIG_CUSTOM_KERNEL_LCM=""
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 CONFIG_CUSTOM_KERNEL_EXTMD=""
 CONFIG_CUSTOM_KERNEL_SSW="ssw_single"
@@ -1380,9 +1380,9 @@ CONFIG_MTK_SERIAL_CONSOLE=y
 # CONFIG_MTK_UART_USB_SWITCH is not set
 CONFIG_MTK_SIM2=y
 CONFIG_MTK_SOUND=y
-CONFIG_MTK_AP3220=y
-CONFIG_MTK_BMA222E_AUTO=y
-CONFIG_MTK_KXTJ2_1009_AUTO=y
+# CONFIG_MTK_AP3220 is not set
+# CONFIG_MTK_BMA222E_AUTO is not set
+# CONFIG_MTK_KXTJ2_1009_AUTO is not set
 # CONFIG_MTK_AUDIO_EXTCODEC_SUPPORT is not set
 # CONFIG_MTK_CM36283 is not set
 # CONFIG_MTK_GP2AP002S00F is not set
@@ -1486,10 +1486,10 @@ CONFIG_MTK_BICR_SUPPORT=y
 # CONFIG_NAND_OTP_SUPPORT is not set
 # CONFIG_MTK_OD_SUPPORT is not set
 CONFIG_MTK_LENS_DUMMYLENS_SUPPORT=y
-CONFIG_MTK_LENS_OV5648AF_DARLING_SUPPORT=y
-CONFIG_MTK_LENS_OV5648AF_DARLING_ZL_SUPPORT=y
-CONFIG_MTK_LENS_OV5648AF_SUNWIN_SUPPORT=y
-CONFIG_MTK_LENS_OV5648AF_TRULY_SUPPORT=y
+# CONFIG_MTK_LENS_OV5648AF_DARLING_SUPPORT is not set
+# CONFIG_MTK_LENS_OV5648AF_DARLING_ZL_SUPPORT is not set
+# CONFIG_MTK_LENS_OV5648AF_SUNWIN_SUPPORT is not set
+# CONFIG_MTK_LENS_OV5648AF_TRULY_SUPPORT is not set
 # CONFIG_MTK_LENS_AD5820AF_SUPPORT is not set
 # CONFIG_MTK_LENS_AD5823_SUPPORT is not set
 # CONFIG_MTK_LENS_AD5823AF_SUPPORT is not set
@@ -1733,9 +1733,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
-CONFIG_TOUCHSCREEN_MTK=y
-CONFIG_MTK_EKTF2K=y
-CONFIG_MTK_GOODIX9XX=y
+# CONFIG_TOUCHSCREEN_MTK is not set
+# CONFIG_MTK_EKTF2K is not set
+# CONFIG_MTK_GOODIX9XX is not set
 # CONFIG_TOUCHSCREEN_MTK_EKTF2136 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_SCP is not set
@@ -1766,9 +1766,9 @@ CONFIG_MTK_GOODIX9XX=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
-CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
-CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
-CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+# CONFIG_TOUCHSCREEN_SWEEP2WAKE is not set
+# CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE is not set
+# CONFIG_TOUCHSCREEN_PREVENT_SLEEP is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
