holly: hx8394d_hd720_dsi_vdo_dijing LCM Drv

--- a/arch/arm/configs/holly_defconfig
+++ b/arch/arm/configs/holly_defconfig
@@ -1165,7 +1165,7 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
 CONFIG_CUSTOM_KERNEL_IMGSENSOR=""
-CONFIG_CUSTOM_KERNEL_LCM=""
+CONFIG_CUSTOM_KERNEL_LCM="hx8394d_hd720_dsi_vdo_dijing_drv"
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 CONFIG_CUSTOM_KERNEL_EXTMD=""
 CONFIG_CUSTOM_KERNEL_SSW="ssw_single"
@@ -1282,8 +1282,8 @@ CONFIG_MTK_FB=y
 CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
 CONFIG_MTK_DITHERING_SUPPORT=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_LCM_HEIGHT="800"
-CONFIG_LCM_WIDTH="480"
+CONFIG_LCM_HEIGHT="1280"
+CONFIG_LCM_WIDTH="720"
 CONFIG_MTK_OVERLAY_ENGINE_SUPPORT=y
 # CONFIG_MTK_TVOUT_SUPPORT is not set
 # CONFIG_MIXMODE_FOR_INCELL is not set
